--- a/sourse/pug/blocks/headerBlock/_headerBlock.pug
+++ b/sourse/pug/blocks/headerBlock/_headerBlock.pug
@@ -4,7 +4,9 @@ mixin headerBlock()
 		.container
 			+b.section-title.text-center
 				h2 headerBlock ds dfsdfdsfsd
-
+				p Lorem ipsum dolor sit amet consectetur adipisicing elit. Recusandae, quo!
+				.text-10 Lorem ipsum dolor sit amet consectetur adipisicing elit.
+				.text-14 Lorem ipsum dolor sit amet.
 			.row
 						
 	// end headerBlock
