--- a/sourse/pug/blocks/mixin-wrap/_mixin-wrap.scss
+++ b/sourse/pug/blocks/mixin-wrap/_mixin-wrap.scss
@@ -111,3 +111,174 @@
 	width: auto;
 	margin-right: rem(32);
 }
+
+.aside-wrap {
+	display: flex;
+	padding: rem(8) rem(12);
+	justify-content: space-between;
+	align-items: center;
+	@include media-breakpoint-up(md) {
+		flex-direction: column;
+		justify-content: flex-start;
+		align-items: stretch;
+		height: 100%;
+		padding: 0;
+	}
+	&__logo {
+		@include media-breakpoint-up(md) {
+			@include block(1, 1);
+			display: flex;
+			align-items: center;
+			justify-content: center;
+			background-color: #000;
+		}
+		@include media-breakpoint-down(md) {
+			order: 2;
+		}
+		svg {
+			width: 100%;
+			max-width: rem(83.2);
+			@include media-breakpoint-up(md) {
+				max-width: rem(52);
+				flex: 0 0 auto;
+			}
+			@include media-breakpoint-down(md) {
+				path {
+					&[fill="white"] {
+						fill: #000000;
+					}
+				}
+			}
+		}
+	}
+	&__nav {
+		margin-bottom: auto;
+		@include media-breakpoint-down(md) {
+			position: fixed;
+			left: 0;
+			bottom: 0;
+			background-color: $gray-800;
+			width: 100%;
+			z-index: 100;
+			padding: rem(5) rem(12);
+		}
+		ul {
+			margin-bottom: 0;
+			list-style-type: none;
+			@include media-breakpoint-down(md) {
+				@include roww('12px', m);
+				display: flex;
+				align-items: center;
+				justify-content: center;
+			}
+			li {
+				@include media-breakpoint-down(md) {
+					width: calc(100% / 4);
+					text-align: center;
+				}
+				a {
+					color: $gray-600;
+					background-color: $gray-800;
+					display: flex;
+					align-items: center;
+					justify-content: center;
+					@include media-breakpoint-up(md) {
+						@include block(1,1);
+						display: flex;
+						background-color: $gray-700;
+					}
+					@include media-breakpoint-down(md) {
+						flex-direction: column;
+						max-width: max-content;
+						margin-left: auto;
+						margin-right: auto;
+					}
+					&:hover, &.active {
+						color: $primary;
+						@include media-breakpoint-up(md) {
+							color: #000;
+							background-color: $primary;
+						}
+						span {
+							color: #fff;
+						}
+					}
+					.icon {
+						font-size: rem(24);
+						flex: 0 0 auto;
+					}
+					span {
+						@include mt;
+						text-align: center;
+						font-size: rem(8);
+						line-height: 1.49;
+						font-weight: 500;
+						margin-top: rem(2);
+						@include media-breakpoint-up(md) {
+							display: none;
+						}
+					}
+				}
+			}
+		}
+	}
+	&__avatar {
+		position: relative;
+		display: flex;
+		align-items: center;
+		justify-content: center;
+		flex: 0 0 auto;
+		width: rem(32);
+		height: rem(32);
+		border-radius: 50%;
+		overflow: hidden;
+		background-color: $warning;
+		@include media-breakpoint-up(md) {
+			width: rem(48);
+			height: rem(48);
+			margin: rem(12) auto;
+		}
+		@include media-breakpoint-down(md) {
+			order: 3;
+		}
+		span {
+			@include text-14;
+			@include a-cent1;
+			color: #fff;
+			z-index: 1;
+			line-height: 1;
+		}
+		img {
+			position: relative;
+			object-fit: cover;
+			width: 100%;
+			height: 100%;
+			z-index: 2;
+		}
+	}
+	&__settings {
+		color: $gray-600;
+		@include media-breakpoint-up(md) {
+			@include block(1,1);
+			display: flex;
+			align-items: center;
+			justify-content: center;
+			background-color: $gray-700;
+		}
+		@include media-breakpoint-down(md) {
+			order: 1;
+			margin-right: rem(8);
+		}
+		&:hover {
+			color: $primary;
+			@include media-breakpoint-up(md) {
+				color: #000;
+				background-color: $primary;
+			}
+		}
+		.icon {
+			font-size: rem(24);
+			flex: 0 0 auto;
+		}
+	}
+}
