--- a/sourse/pug/layout/js-css.pug
+++ b/sourse/pug/layout/js-css.pug
@@ -10,5 +10,6 @@ mixin allcjs()
 	script(src="libs/@fancyapps/ui/fancybox/fancybox.umd.js") 
 	script(src="libs/swiper/swiper-bundle.min.js")  
 	script(src="libs/inputmask/inputmask.min.js") 
+	<script src="https://cdn.jsdelivr.net/npm/bootstrap@5.2.3/dist/js/bootstrap.bundle.min.js"></script>
 	//- script(src=`js/common.js?v=${version}`)
 	script(src=`js/common.js`)
