--- a/sourse/pug/layout/main.pug
+++ b/sourse/pug/layout/main.pug
@@ -48,8 +48,10 @@ html(lang="ru")
 	//- body.loaded_hiding(class= mainPage) 
 	body(class=mainPage data-bg=bg)
 		.main-wrapper
-			block pagecontent
-				h3 content
+			+aside()
+			.main-center-wrap
+				block pagecontent
+					h3 content
 		
 
 		+allcjs()
