--- a/sourse/sass/_base.scss
+++ b/sourse/sass/_base.scss
@@ -98,18 +98,42 @@ body {
 .main-wrapper { 
 	position: relative;
 	width: 100%;
-	overflow: hidden;
-	// display: flex;
-	// flex-direction: row; 
-// /	overflow: scroll;
-	// width: 100%; 
-	// height: 100vh;
-	// height: calc(var(--vh, 1vh) * 100);
-	
-	
+	// overflow: hidden;
+	display: flex; 
+	flex-direction: column;
+	@include media-breakpoint-up(md) {
+		flex-direction: row;
+	}
 }
 main{
+	display: flex;
+	flex-direction: column;
 	flex-grow: 1;
+	justify-content: flex-start;
+	min-height: 100vh;
+}
+aside {
+	background-color: #fff;
+	@include media-breakpoint-up(md) {
+		--asideW: #{rem(62)};
+		height: 100vh;
+		position: sticky;
+		left: 0;
+		top: 0;
+		flex: 0 0 var(--asideW);
+		background-color: $gray-800;
+	}
+	@include media-breakpoint-up(lg) {
+		--asideW: #{rem(72)};
+	}
+}
+.main-center-wrap {
+	flex-grow: 1;
+	overflow: hidden;
+	position: relative;
+	@include media-breakpoint-down(md) {
+		padding-bottom: rem(48);
+	}
 }
 // .main-wrapper__inner{
 // 	// overflow-x: hidden;
@@ -545,4 +569,15 @@ iframe {
 	max-width: 340px;
 	margin-left: auto;
 	margin-right: auto;
+}
+
+.text-14 {
+	@include text-10;
+}
+
+p {
+	font-size: rem(14);
+	@include media-breakpoint-up(lg) {
+		font-size: rem(16);
+	}
 }
