--- a/sourse/sass/_fonts.scss
+++ b/sourse/sass/_fonts.scss
@@ -1,4 +1,4 @@
-$default-font: "roboto";
+$default-font: "AkzidenzGroteskPro";
 // $file-form: ($file-formats: woff2 woff ttf);
 $addr: '../fonts/';
 $file-format: woff2;
@@ -6,10 +6,12 @@ $file-format: woff2;
 
 // If font from googlefont, next lines remove
 
-// @include font-face ($default-font, $addr + "Roboto-Regular/Roboto-Regular", $file-formats: $file-format);
-// @include font-face ($default-font, $addr + "Roboto-Bold/Roboto-Bold", bold, $file-formats: $file-format);
-// @include font-face ($default-font, $addr + "Roboto-Medium/Roboto-Medium", 500, $file-formats: $file-format);
-// @include font-face ($default-font, $addr + "Roboto-Black/Roboto-Black", 900, $file-formats: $file-format);
+@include font-face ($default-font, $addr + "AkzidenzGroteskPro/AkzidenzGroteskPro-Regular", $file-formats: $file-format);
+@include font-face ($default-font, $addr + "AkzidenzGroteskPro/AkzidenzGroteskPro-Md", 500, $file-formats: $file-format);
+@include font-face ($default-font + 'Extended', $addr + "AkzidenzGroteskPro/AkzidenzGroteskPro-MdEx", 500, $file-formats: $file-format);
+@include font-face ($default-font, $addr + "AkzidenzGroteskPro/AkzidenzGroteskPro-Lt", 300, $file-formats: $file-format);
+@include font-face ("Arial", $addr + "Arial/Arial-Regular", 400, $file-formats: $file-format);
+@include font-face ("Arial", $addr + "Arial/Arial-Bold", 700, $file-formats: $file-format);
 
 // font-weight helper:
 // 100 Thin
