--- a/sourse/pug/layout/main.pug
+++ b/sourse/pug/layout/main.pug
@@ -52,7 +52,7 @@ html(lang="ru")
 			.main-center-wrap
 				block pagecontent
 					h3 content
-		
+				+img('img/svg/page-bg.svg').page-bg
 
 		+allcjs()
 		block scripts
