--- a/sourse/pug/blocks/mixin-wrap/mixin-wrap.pug
+++ b/sourse/pug/blocks/mixin-wrap/mixin-wrap.pug
@@ -38,13 +38,14 @@ mixin search()
 			button 
 				+icon("search")
 
-mixin page-head(t,...items)
+mixin page-head(data)
 	+b.page-head
-		- let l = items.length
-		.container
-			+breadcrumb('Главная',...items)
-
-			h1= t
+		//- - let l = data.items.length
+		.container-fluid
+			if data.items
+				+breadcrumb(...data.items)
+			if data.t
+				h1!= data.t
 
 mixin parts(elem)
 	script.
