--- a/sourse/pug/pages/index.pug
+++ b/sourse/pug/pages/index.pug
@@ -1,8 +1,6 @@
 extends ../layout/main.pug
 
-include ../blocks/headerBlock/_headerBlock.pug
-include ../blocks/sForm/_sForm.pug
-include ../blocks/sContent/_sContent.pug
+include ../blocks/sObject/_sObject.pug
  
 include ../blocks/sContact/_sContact.pug
 include ../blocks/sForm/_sForm.pug
@@ -14,18 +12,17 @@ block variables
 	- let  bg= 'main.jpg'
 
 block title
-	- let  title= 'Главная'
+	- let  title= 'Объект'
 	title= title
 block pagecontent
 	//- +mob-mnu()
 	
 	main
-		.ratiod
-		button(type='button' data-bs-toggle="tooltip" data-bs-placement="bottom" title="Объекты") divdiv
-		+headerBlock 
-		//- +sCatalog
-		+sForm()
-		+sContact()
+		+page-head({
+			t: 'Объекты',
+			items: ['Объекты']
+		})
+		+sObject
       
 
 
