--- a/sourse/sass/_base.scss
+++ b/sourse/sass/_base.scss
@@ -581,3 +581,92 @@ p {
 		font-size: rem(16);
 	}
 }
+
+.tooltip {
+	.tooltip-arrow {
+		display: none;
+	}
+}
+
+.bs-tooltip-auto[data-popper-placement^=right] {
+	left: rem(12) !important;
+}
+
+.container-fluid {
+	--bs-gutter-x: #{rem(24)};
+	@include media-breakpoint-up(md) {
+		--bs-gutter-x: #{rem(96)};
+	}
+}
+
+.breadcrumb-slider--js {
+	overflow: visible;
+}
+.breadcrumb {
+	padding-left: 0;
+	flex-wrap: nowrap;
+	align-items: center;
+	@include media-breakpoint-down(md) {
+		--bs-breadcrumb-padding-y: #{rem(12)};
+		--bs-breadcrumb-font-size: #{rem(14)};
+	}
+	&-item {
+		display: flex;
+		align-items: center;
+		a {
+			font-weight: 400;
+			font-style: italic;
+			line-height: 1.25;
+			color: $gray-600;
+			&:hover {
+				color: $primary;
+			}
+		}
+		&.active {
+
+		}
+		& + & {
+			&:before {
+				width: rem(20);
+				height: rem(20);
+			}
+		}
+	}
+}
+
+h1 {
+	@include media-breakpoint-down(sm) {
+		font-size: rem(24);
+	}
+}
+
+.main-page {
+	.page-head {
+		margin-bottom: rem(18);
+		@include media-breakpoint-up(md) {
+			margin-bottom: rem(36);
+		}
+	}
+}
+
+.badge {
+	display: inline-flex;
+	align-items: center;
+	line-height: 1.25;
+	&-purple {
+		background-color: $purple;
+	}
+	&-warning {
+		background-color: $warning
+	}
+	&-success {
+		background-color: $success;
+	}
+	&-secondary {
+		background-color: $secondary;
+	}
+	svg {
+		flex: 0 0 auto;
+		margin-right: rem(6);
+	}
+}
