--- a/sourse/pug/blocks/mixin-wrap/_mixin-wrap.scss
+++ b/sourse/pug/blocks/mixin-wrap/_mixin-wrap.scss
@@ -308,13 +308,17 @@
 }
 
 .sObject-card {
-	@include block(308, 336);
+	@include block(192, 336);
 	background-color: #fff;
 	padding: rem(24) rem(24) rem(36) rem(24);
 	display: flex;
 	flex-direction: column;
 	position: relative;
 	height: 100%;
+	width: 100%;
+	@include media-breakpoint-up(sm) {
+		--ratio: 336/308;
+	}
 	@include media-breakpoint-up(md) {
 		padding: rem(36) rem(36) rem(48) rem(36);
 	}
@@ -322,9 +326,12 @@
 		font-family: 'AkzidenzGroteskProExtended';
 		margin-bottom: rem(12);
 		line-height: 1.25;
-		@include media-breakpoint-down(sm) {
+		@include media-breakpoint-down(md) {
 			font-size: rem(18);
 		}
+		// @include media-breakpoint-up(xl) {
+		// 	font-size: rem(24);
+		// }
 		&:hover {
 			color: $primary;
 		}
@@ -335,6 +342,8 @@
 		color: $gray-600;
 	}
 	&__row {
+		--bs-gutter-y: #{rem(12)};
+
 		align-items: flex-end;
 		margin-top: auto;
 		@include media-breakpoint-up(md) {
@@ -376,6 +385,53 @@
 			opacity: .36;
 			left: 0;
 			bottom: 0;
+		}
+	}
+	&__icon {
+		@include mt;
+		width: rem(48);
+		height: rem(48);
+		background-color: $primary;
+		border-radius: 50%;
+		display: flex;
+		align-items: center;
+		justify-content: center;
+		margin-bottom: rem(12);
+		.icon {
+			font-size: rem(20);
+		}
+	}
+	&__add {
+		font-size: rem(14);
+		font-weight: 500;
+		line-height: 1.25;
+		color: #000;
+		@include media-breakpoint-up(md) {
+			font-size: rem(16);
+		}
+		&:before {
+			content: '';
+			position: absolute;
+			display: block;
+			width: 100%;
+			height: 100%;
+			left: 0;
+			top: 0;
+			z-index: 1;
+		}
+	}
+	&--addNew {
+		align-items: center;
+		justify-content: center;
+		background-color: $gray-400;
+		border: 1px solid $gray-200;
+		@include mt;
+		&:hover {
+			border-color: $primary;
+			background-color: $primary;
+			.sObject-card__icon {
+				background-color: #fff;
+			}
 		}
 	}
 }
