--- a/sourse/sass/_sprite.scss
+++ b/sourse/sass/_sprite.scss
@@ -35,6 +35,10 @@
 	font-size:math.div(24,10)*1rem;
 	width: math.div(24,24)*1em;
 }
+.icon-plus {
+	font-size:math.div(20,10)*1rem;
+	width: math.div(20,20)*1em;
+}
 .icon-settings {
 	font-size:math.div(24,10)*1rem;
 	width: math.div(24,24)*1em;
