--- a/sourse/pug/blocks/mixin-wrap/_mixin-wrap.scss
+++ b/sourse/pug/blocks/mixin-wrap/_mixin-wrap.scss
@@ -322,7 +322,7 @@
 	@include media-breakpoint-up(md) {
 		padding: rem(36) rem(36) rem(48) rem(36);
 	}
-	.h3 {
+	.h4 {
 		font-family: 'AkzidenzGroteskProExtended';
 		margin-bottom: rem(12);
 		line-height: 1.25;
@@ -333,7 +333,7 @@
 		// 	font-size: rem(24);
 		// }
 		&:hover {
-			color: $primary;
+			color: $warning;
 		}
 	}
 	p {
@@ -431,6 +431,134 @@
 			background-color: $primary;
 			.sObject-card__icon {
 				background-color: #fff;
+			}
+		}
+	}
+}
+
+.custom-select-wrap {
+	// min-width: rem(270);
+	// max-width: rem(270);
+	display: flex;
+	align-items: center;
+	position: relative;
+	&__label {
+		@include mt;
+		font-size: rem(14);
+		margin-right: rem(6);
+		order: 1;
+		@include media-breakpoint-up(md) {
+			font-size: rem(16);
+		}
+		span {
+			position: relative;
+			display: inline-block;
+			vertical-align: text-bottom;
+			width: rem(20);
+			height: rem(20);
+			&::before {
+				content: '';
+				position: absolute;
+				display: block;
+				width: rem(4);
+				height: rem(4);
+				border-radius: 50%;
+				background-color: $gray-600;
+				@include a-cent1;
+			}
+		}
+	}
+	.select2 {
+		flex-grow: 1;
+		order: 2;
+		&-selection {
+			--bs-form-select-bg-img: url("data:image/svg+xml,%3Csvg width='20' height='20' viewBox='0 0 20 20' fill='none' xmlns='http://www.w3.org/2000/svg'%3E%3Cpath fill-rule='evenodd' clip-rule='evenodd' d='M15.9647 6.82078C15.9461 6.76927 15.9308 6.7228 15.9306 6.71751C15.9294 6.68417 15.3403 6.11764 15.2681 6.08044C15.0826 5.98473 14.8178 5.98297 14.6313 6.0762C14.5925 6.09563 13.5361 7.1349 12.2838 8.38566L10.007 10.6598L7.71846 8.37438C5.18178 5.84117 5.36048 5.99957 5.04288 6.00301C4.8188 6.00545 4.71705 6.06644 4.39373 6.39205C4.00811 6.78039 3.91783 7.04701 4.07022 7.34755C4.14711 7.49916 9.60044 12.9333 9.73686 12.9942C9.88838 13.0619 10.1388 13.0658 10.2762 13.0026C10.4258 12.9338 15.8704 7.49036 15.9441 7.33584C16.0098 7.19841 16.0188 6.97103 15.9647 6.82078Z' fill='%23F4B13E'/%3E%3C/svg%3E%0A");
+			background-size: 20px;
+
+			padding: 0;
+			border: none;
+			font-size: rem(14);
+			display: block;
+			background-image: none;
+			@include media-breakpoint-up(md) {
+				font-size: rem(16);
+			}
+			&:before {
+				@include mt;
+				content: '';
+				position: absolute;
+				display: block;
+				background-image: var(--bs-form-select-bg-img),var(--bs-form-select-bg-icon,none);
+				background-size: contain;
+				background-position: center;
+				background-repeat: no-repeat;
+				right: 0;
+				top: 50%;
+				transform: translateY(-50%);
+				width: rem(20);
+				height: rem(20);
+			}
+		}
+		&-container--open {
+			.select2-selection:before {
+				transform: translateY(-50%) rotateX(180deg);
+			}
+		}
+	}
+	&--first-type {
+		.custom-select-wrap {
+			&__label {
+				color: rgba($color: #000000, $alpha: .48);
+			}
+		}
+		.select2-container--open {
+			& ~ .custom-select-wrap__label {
+				color: #000;
+			}
+		}
+	}
+	&--second-type {
+		.select2-container--default .select2-selection--single .select2-selection__rendered {
+			@include mt;
+			color: rgba($color: #000000, $alpha: .48);
+		}
+		.select2-container--open {
+			.select2-selection--single .select2-selection__rendered {
+				color: #000;
+			}
+		}
+	}
+}
+
+.select2 {
+	&-container {
+		left: 0 !important;
+	}
+	&-dropdown {
+		border: none;
+		top: rem(12);
+		box-shadow: 0px 5px 5px 0px rgba(0, 0, 0, 0.05);
+		border-radius: 4px !important;
+		overflow: hidden;
+		min-width: rem(216);
+
+	}
+	&-results {
+		&__options {
+			max-height: rem(220);
+		}
+		&__option {
+			line-height: 1.25;
+			font-size: rem(14);
+			padding: rem(10);
+			color: #000;
+			@include media-breakpoint-up(md) {
+				padding: rem(12);
+				font-size: rem(16);
+			}
+			&--selected, &--highlighted {
+				background-color: $gray-100 !important;
+				color: #000 !important;
 			}
 		}
 	}
