--- a/sourse/sass/_base.scss
+++ b/sourse/sass/_base.scss
@@ -111,6 +111,7 @@ main{
 	flex-grow: 1;
 	justify-content: flex-start;
 	min-height: 100vh;
+	padding-bottom: rem(24);
 }
 aside {
 	background-color: #fff;
