--- a/sourse/pug/blocks/mixin-wrap/_mixin-wrap.scss
+++ b/sourse/pug/blocks/mixin-wrap/_mixin-wrap.scss
@@ -38,7 +38,7 @@
 
 
 .addBlock{
-	color: var(--color, #{$primary});
+	color: var(--color, #{$accent});
 	border: 1px solid;
 	border-radius: 23px;
 	display: flex;
@@ -194,10 +194,10 @@
 						margin-right: auto;
 					}
 					&:hover, &.active {
-						color: $primary;
+						color: $accent;
 						@include media-breakpoint-up(md) {
 							color: #000;
-							background-color: $primary;
+							background-color: $accent;
 						}
 						span {
 							color: #fff;
@@ -232,7 +232,7 @@
 		height: rem(32);
 		border-radius: 50%;
 		overflow: hidden;
-		background-color: $warning;
+		background-color: $blue;
 		@include media-breakpoint-up(md) {
 			width: rem(48);
 			height: rem(48);
@@ -270,10 +270,10 @@
 			margin-right: rem(8);
 		}
 		&:hover {
-			color: $primary;
+			color: $accent;
 			@include media-breakpoint-up(md) {
 				color: #000;
-				background-color: $primary;
+				background-color: $accent;
 			}
 		}
 		.icon {
@@ -333,7 +333,7 @@
 		// 	font-size: rem(24);
 		// }
 		&:hover {
-			color: $warning;
+			color: $blue;
 		}
 	}
 	p {
@@ -391,7 +391,7 @@
 		@include mt;
 		width: rem(48);
 		height: rem(48);
-		background-color: $primary;
+		background-color: $accent;
 		border-radius: 50%;
 		display: flex;
 		align-items: center;
@@ -420,6 +420,9 @@
 			z-index: 1;
 		}
 	}
+	.badge {
+		background-color: var(--bgDefColor);
+	}
 	&--addNew {
 		align-items: center;
 		justify-content: center;
@@ -427,8 +430,8 @@
 		border: 1px solid $gray-200;
 		@include mt;
 		&:hover {
-			border-color: $primary;
-			background-color: $primary;
+			border-color: $accent;
+			background-color: $accent;
 			.sObject-card__icon {
 				background-color: #fff;
 			}
