--- a/sourse/pug/blocks/modal/_modal.scss
+++ b/sourse/pug/blocks/modal/_modal.scss
@@ -21,7 +21,7 @@
 	}
 
 	.mfp-close {
-		color: $primary;
+		color: $accent;
 		font-size: 40px;
 		font-weight: 100;
 	}
@@ -91,7 +91,7 @@ a {
 
 .polite {
 	.link {
-		color: $primary;
+		color: $accent;
 		cursor: pointer;
 		text-decoration: underline;
 
