--- a/sourse/sass/_sprite.scss
+++ b/sourse/sass/_sprite.scss
@@ -11,6 +11,10 @@
 	font-size:math.div(24,10)*1rem;
 	width: math.div(22,24)*1em;
 }
+.icon-calendar {
+	font-size:math.div(20,10)*1rem;
+	width: math.div(20,20)*1em;
+}
 .icon-check {
 	font-size:math.div(27,10)*1rem;
 	width: math.div(27,27)*1em;
@@ -26,6 +30,10 @@
 .icon-file {
 	font-size:math.div(24,10)*1rem;
 	width: math.div(24,24)*1em;
+}
+.icon-fist {
+	font-size:math.div(20,10)*1rem;
+	width: math.div(20,20)*1em;
 }
 .icon-instagram {
 	font-size:math.div(24,10)*1rem;
