--- a/sourse/pug/blocks/mixin-wrap/_mixin-wrap.scss
+++ b/sourse/pug/blocks/mixin-wrap/_mixin-wrap.scss
@@ -581,3 +581,83 @@
 		}
 	}
 }
+
+.task-stat {
+	font-size: rem(14);
+	line-height: 1.25;
+	color: #fff;
+	font-weight: 500;
+	// font-family: 'AkzidenzGroteskProExtended';
+	display: flex;
+	align-items: center;
+	text-align: center;
+	@include media-breakpoint-up(md) {
+		font-size: rem(16);
+		text-align: left;
+	}
+	.icon {
+		flex: 0 0 auto;
+		margin-right: rem(6);
+		font-size: rem(20);
+		color: $success;
+	}
+}
+.start-date {
+	padding: rem(12) rem(18);
+	border-radius: 60px;
+	background: rgba(0, 0, 0, 0.48);
+	display: flex;
+	align-items: center;
+	color: #fff;
+	line-height: 1.25;
+	font-size: rem(14);
+	text-align: center;
+	@include media-breakpoint-up(md) {
+		font-size: rem(16);
+		text-align: left;
+	}
+	.icon {
+		font-size: rem(20);
+		margin-right: rem(10);
+		flex: 0 0 auto;
+	}
+}
+
+.work-status {
+	width: 100%;
+	max-width: rem(456);
+	color: #fff;
+	font-size: rem(14);
+	@include media-breakpoint-up(md) {
+		font-size: rem(16);
+	}
+	.line {
+		position: relative;
+		width: 100%;
+		height: rem(6);
+		margin-top: rem(6);
+		line-height: .25;
+		@include media-breakpoint-up(md) {
+			height: rem(12);
+		}
+		&:after, &:before {
+			content: '';
+			position: absolute;
+			display: block;
+			height: 100%;
+			left: 0;
+			top: 0;
+			background-color: var(--bgColor);
+		}
+		&:after {
+			width: 100%;
+			opacity: .36;
+		}
+		&:before {
+			width: var(--w);
+		}
+	}
+	&.disabled {
+		opacity: 0.47999998927116394;
+	}
+}
