--- a/sourse/pug/pages/01-2-object.pug
+++ b/sourse/pug/pages/01-2-object.pug
@@ -10,7 +10,7 @@ include ../blocks/sPageInfo/_sPageInfo.pug
 
 block variables
 	- let  mainPage= 'main-page' 
-	- let  bg= 'main.jpg'
+	- let  bg= '01-2-object.jpg'
 
 block title
 	- let  title= 'Объект 01-2'
