--- a/sourse/pug/blocks/sPageInfo/_sPageInfo.scss
+++ b/sourse/pug/blocks/sPageInfo/_sPageInfo.scss
@@ -57,15 +57,11 @@
 		}
 	}
 	&__inner-wrap {
-		@include roww('24px', m);
+		@include roww('24px', '18px', m);
 		--bs-gutter-y: #{rem(18)};
 		display: flex;
 		align-items: center;
 		flex-direction: column;
-		margin-top: calc(var(--bs-gutter-y) * -1);
-		& > * {
-			margin-top: var(--bs-gutter-y);
-		}
 		@include media-breakpoint-up(md) {
 			flex-direction: row;
 		}
