--- a/sourse/sass/_base.scss
+++ b/sourse/sass/_base.scss
@@ -9,8 +9,8 @@
 	height: 100%;
 	background-position: center 0;
 	opacity: 0;
-	opacity: 0;
 	// opacity: 0.7;
+	// height: 2000px;
 } 
 
 body,
@@ -674,4 +674,9 @@ h1 {
 		flex: 0 0 auto;
 		margin-right: rem(6);
 	}
+}
+
+.container-fluid {
+	max-width: rem(1512);
+	margin-left: 0;
 }
