--- a/sourse/pug/blocks/sObject/_sObject.pug
+++ b/sourse/pug/blocks/sObject/_sObject.pug
@@ -41,7 +41,7 @@ mixin sObject(data)
 							| Планирование
 				+e.col.col-sm-6.col-lg-4.col-xxl-auto
 					+sObjectCard('КП Волжские усадьбы', '12 ноя - 23 дек 2023', '#467CF4', '34%')
-						.badge.badge-warning 
+						.badge.badge-primary
 							+img(`img/svg/play.svg`).img-svg-js
 							| В работе 
 				+e.col.col-sm-6.col-lg-4.col-xxl-auto
