--- a/sourse/pug/blocks/mixin-wrap/_mixin-wrap.scss
+++ b/sourse/pug/blocks/mixin-wrap/_mixin-wrap.scss
@@ -1,32 +1,26 @@
- 
-	  
-.soc{
+.soc {
 	@include roww(10px, m);
 	display: flex;
-	&__item{
-		text-decoration: none !important; 
+	&__item {
+		text-decoration: none !important;
 		vertical-align: middle;
 		@include mt;
 		display: grid;
 		place-items: center;
-		&:hover{
-		 	// box-shadow: 0 0 33px 0px rgba(255, 83, 0, 0.16);
+		&:hover {
+			// box-shadow: 0 0 33px 0px rgba(255, 83, 0, 0.16);
 			// opacity: .6 ;
 		}
-		
 	}
-	.icon{
+	.icon {
 		font-size: rem(30);
 	}
-
-
 }
 
-
-.counter{
+.counter {
 	counter-reset: num;
 	&__item {
-		position: relative; 
+		position: relative;
 		&::before {
 			content: counter(num);
 			counter-increment: num;
@@ -34,23 +28,20 @@
 	}
 }
 
-
-
-
-.addBlock{
+.addBlock {
 	color: var(--color, #{$accent});
 	border: 1px solid;
 	border-radius: 23px;
 	display: flex;
 	position: relative;
 	overflow: hidden;
-	input{
+	input {
 		color: inherit;
 		text-align: center;
 		border: none;
 		height: rem(45);
 	}
-	&__btn{
+	&__btn {
 		color: inherit;
 		height: rem(45);
 		position: relative;
@@ -64,24 +55,23 @@
 		// padding-right: rem(8);
 		width: rem(26);
 		&::before,
-		&::after{
-			content: '';
+		&::after {
+			content: "";
 			width: 10px;
-			height: 2px; 
+			height: 2px;
 			background-color: currentColor;
 			@include a-cent;
 			position: absolute;
 		}
-		&--plus::after{
+		&--plus::after {
 			transform: rotate(90deg);
 		}
 	}
 }
 
-
-.search-block{
+.search-block {
 	position: relative;
-	input{
+	input {
 		font-size: 14px;
 		width: 100%;
 		border: none !important;
@@ -90,11 +80,11 @@
 		padding-top: rem(14);
 		padding-bottom: rem(14);
 	}
-	.icon{
+	.icon {
 		font-size: rem(20);
 		border: none !important;
 	}
-	button{
+	button {
 		position: absolute;
 		left: 0;
 		top: 0;
@@ -107,7 +97,7 @@
 	}
 }
 
-.breadcrumb-item{
+.breadcrumb-item {
 	width: auto;
 	// margin-right: rem(32);
 }
@@ -166,7 +156,7 @@
 			margin-bottom: 0;
 			list-style-type: none;
 			@include media-breakpoint-down(md) {
-				@include roww('12px', m);
+				@include roww("12px", m);
 				display: flex;
 				align-items: center;
 				justify-content: center;
@@ -183,7 +173,7 @@
 					align-items: center;
 					justify-content: center;
 					@include media-breakpoint-up(md) {
-						@include block(1,1);
+						@include block(1, 1);
 						display: flex;
 						background-color: $gray-700;
 					}
@@ -193,7 +183,8 @@
 						margin-left: auto;
 						margin-right: auto;
 					}
-					&:hover, &.active {
+					&:hover,
+					&.active {
 						color: $accent;
 						@include media-breakpoint-up(md) {
 							color: #000;
@@ -259,7 +250,7 @@
 	&__settings {
 		color: $gray-600;
 		@include media-breakpoint-up(md) {
-			@include block(1,1);
+			@include block(1, 1);
 			display: flex;
 			align-items: center;
 			justify-content: center;
@@ -290,14 +281,33 @@
 		text-align: left;
 		margin-bottom: rem(48);
 	}
+	&__row {
+		--bs-gutter-y: #{rem(12)};
+	}
+	&__row-sm {
+		align-items: center;
+		@include media-breakpoint-down(md) {
+			justify-content: center;
+		}
+	}
+	h1 {
+		.badge {
+			@include text-14;
+		}
+	}
+	.breadcrumb {
+		@include media-breakpoint-down(md) {
+			padding-bottom: 0;
+		}
+	}
 	h1 {
 		margin-bottom: 0;
 		line-height: 1.2;
 		text-transform: uppercase;
-		font-family: 'AkzidenzGroteskProExtended';
+		font-family: "AkzidenzGroteskProExtended";
 	}
 	&__edit {
-		display: flex;
+		display: inline-flex;
 		align-items: center;
 		line-height: 1.25;
 		font-style: italic;
@@ -338,7 +348,7 @@
 		padding: rem(36) rem(36) rem(48) rem(36);
 	}
 	.h4 {
-		font-family: 'AkzidenzGroteskProExtended';
+		font-family: "AkzidenzGroteskProExtended";
 		margin-bottom: rem(12);
 		line-height: 1.25;
 		@include media-breakpoint-down(md) {
@@ -380,7 +390,7 @@
 		left: 0;
 		bottom: 0;
 		&:before {
-			content: '';
+			content: "";
 			display: block;
 			position: absolute;
 			left: 0;
@@ -391,13 +401,13 @@
 			height: 100%;
 		}
 		&:after {
-			content: '';
+			content: "";
 			position: absolute;
 			display: block;
 			background-color: var(--bgDefColor);
 			height: 100%;
 			width: 100%;
-			opacity: .36;
+			opacity: 0.36;
 			left: 0;
 			bottom: 0;
 		}
@@ -425,7 +435,7 @@
 			font-size: rem(16);
 		}
 		&:before {
-			content: '';
+			content: "";
 			position: absolute;
 			display: block;
 			width: 100%;
@@ -475,7 +485,7 @@
 			width: rem(20);
 			height: rem(20);
 			&::before {
-				content: '';
+				content: "";
 				position: absolute;
 				display: block;
 				width: rem(4);
@@ -503,10 +513,10 @@
 			}
 			&:before {
 				@include mt;
-				content: '';
+				content: "";
 				position: absolute;
 				display: block;
-				background-image: var(--bs-form-select-bg-img),var(--bs-form-select-bg-icon,none);
+				background-image: var(--bs-form-select-bg-img), var(--bs-form-select-bg-icon, none);
 				background-size: contain;
 				background-position: center;
 				background-repeat: no-repeat;
@@ -526,7 +536,7 @@
 	&--first-type {
 		.custom-select-wrap {
 			&__label {
-				color: rgba($color: #000000, $alpha: .48);
+				color: rgba($color: #000000, $alpha: 0.48);
 			}
 		}
 		.select2-container--open {
@@ -538,7 +548,7 @@
 	&--second-type {
 		.select2-container--default .select2-selection--single .select2-selection__rendered {
 			@include mt;
-			color: rgba($color: #000000, $alpha: .48);
+			color: rgba($color: #000000, $alpha: 0.48);
 		}
 		.select2-container--open {
 			.select2-selection--single .select2-selection__rendered {
@@ -559,7 +569,6 @@
 		border-radius: 4px !important;
 		overflow: hidden;
 		min-width: rem(216);
-
 	}
 	&-results {
 		&__options {
@@ -574,7 +583,8 @@
 				padding: rem(12);
 				font-size: rem(16);
 			}
-			&--selected, &--highlighted {
+			&--selected,
+			&--highlighted {
 				background-color: $gray-100 !important;
 				color: #000 !important;
 			}
@@ -636,12 +646,13 @@
 		width: 100%;
 		height: rem(6);
 		margin-top: rem(6);
-		line-height: .25;
+		line-height: 0.25;
 		@include media-breakpoint-up(md) {
 			height: rem(12);
 		}
-		&:after, &:before {
-			content: '';
+		&:after,
+		&:before {
+			content: "";
 			position: absolute;
 			display: block;
 			height: 100%;
@@ -651,7 +662,7 @@
 		}
 		&:after {
 			width: 100%;
-			opacity: .36;
+			opacity: 0.36;
 		}
 		&:before {
 			width: var(--w);
