--- a/sourse/pug/blocks/mixin-wrap/_mixin-wrap.scss
+++ b/sourse/pug/blocks/mixin-wrap/_mixin-wrap.scss
@@ -284,27 +284,26 @@
 	&__row {
 		--bs-gutter-y: #{rem(12)};
 	}
-	&__row-sm {
-		align-items: center;
-		@include media-breakpoint-down(md) {
-			justify-content: center;
-		}
-	}
-	h1 {
-		.badge {
-			@include text-14;
-		}
-	}
-	.breadcrumb {
-		@include media-breakpoint-down(md) {
-			padding-bottom: 0;
-		}
-	}
+
 	h1 {
 		margin-bottom: 0;
 		line-height: 1.2;
 		text-transform: uppercase;
 		font-family: "AkzidenzGroteskProExtended";
+		
+		.badge {
+			@include text-14;
+			// margin-left: rem(6);
+			padding: rem(5) rem(12);
+			font-family: $default-font;
+			font-weight: 500;
+			line-height: 130%;
+			vertical-align: middle;
+			@include media-breakpoint-up(md) {
+				// margin-left: rem(18);
+				line-height: 140%;
+			}
+		}
 	}
 	&__edit {
 		display: inline-flex;
@@ -320,6 +319,14 @@
 			flex: 0 0 auto;
 			margin-left: rem(12);
 		}
+	}
+	.task-stat {
+		display: inline-flex;
+		color: $gray-800;
+		// font-family: 'AkzidenzGroteskProExtended';
+	}
+	.start-date {
+		display: inline-flex;
 	}
 }
 
@@ -597,7 +604,7 @@
 	line-height: 1.25;
 	color: #fff;
 	font-weight: 500;
-	// font-family: 'AkzidenzGroteskProExtended';
+	font-family: 'AkzidenzGroteskProExtended';
 	display: flex;
 	align-items: center;
 	text-align: center;
