--- a/sourse/pug/pages/01-3-house.pug
+++ b/sourse/pug/pages/01-3-house.pug
@@ -1,7 +1,7 @@
 extends ../layout/main.pug
 
 include ../blocks/sObject/_sObject.pug
- 
+
 //- include ../blocks/sContact/_sContact.pug
 //- include ../blocks/sForm/_sForm.pug
 //- include ../blocks/sForm/_sForm.pug
@@ -17,17 +17,20 @@ block title
 	title= title
 block pagecontent
 	//- +mob-mnu()
-	
+
 	main
 		+page-head({
-			t: 'Подъезд №2',
-			badge: '33%',
 			items: ['Объекты', 'ЖК видный', 'Дом №1'],
 			edit: {},
-		}).mb-0
+			t: 'Дом №1',
+			badge: '33%',
+			stat: ' ',
+			date: ' ',
+
+		})
 		//- +sPageInfo
 
-      
+
 
 
 
