--- a/sourse/pug/blocks/mixin-wrap/_mixin-wrap.scss
+++ b/sourse/pug/blocks/mixin-wrap/_mixin-wrap.scss
@@ -290,7 +290,7 @@
 		line-height: 1.2;
 		text-transform: uppercase;
 		font-family: "AkzidenzGroteskProExtended";
-		
+
 		.badge {
 			@include text-14;
 			// margin-left: rem(6);
@@ -604,7 +604,7 @@
 	line-height: 1.25;
 	color: #fff;
 	font-weight: 500;
-	font-family: 'AkzidenzGroteskProExtended';
+	font-family: "AkzidenzGroteskProExtended";
 	display: flex;
 	align-items: center;
 	text-align: center;
@@ -677,5 +677,22 @@
 	}
 	&.disabled {
 		opacity: 0.47999998927116394;
+	}
+}
+
+.detailsHead {
+	padding-top: rem(12);
+	max-width: rem(696);
+	@include media-breakpoint-up(sm) {
+		border-top: 1px solid $gray-200;
+	}
+	&__row {
+		--bs-gutter-y: calc(var(--bs-gutter-x) / 2);
+	}
+	&__col {
+		font-size: rem(16);
+		font-family: "AkzidenzGroteskProExtended";
+		font-weight: 500;
+		line-height: 125%;
 	}
 }
