--- a/sourse/sass/_sprite.scss
+++ b/sourse/sass/_sprite.scss
@@ -19,6 +19,10 @@
 	font-size:math.div(27,10)*1rem;
 	width: math.div(27,27)*1em;
 }
+.icon-chevron-down {
+	font-size:math.div(20,10)*1rem;
+	width: math.div(20,20)*1em;
+}
 .icon-edit {
 	font-size:math.div(24,10)*1rem;
 	width: math.div(24,24)*1em;
