--- a/sourse/pug/blocks/mixin-wrap/mixin-wrap.pug
+++ b/sourse/pug/blocks/mixin-wrap/mixin-wrap.pug
@@ -129,3 +129,17 @@ mixin detailsHead(...items)
 			each item in items
 				+e.col.col-sm-auto!= item
 
+
+mixin circularProgressBar(precent)
+	.circular-progress-bar
+		.percent
+			svg
+				circle
+				circle(style=`--percent: ${precent}`)
+			.number
+				h2!= precent
+					| %
+				p Прогресс
+
+mixin bottomInfoBar()
+	+b.bottom-info-bar
