--- a/sourse/pug/blocks/sPageInfo/_sPageInfo.scss
+++ b/sourse/pug/blocks/sPageInfo/_sPageInfo.scss
@@ -18,6 +18,8 @@
 		}
 	}
 	&__body-row {
+		--bs-gutter-y: #{rem(18)};
+		
 		justify-content: center;
 		@include media-breakpoint-up(md) {
 			align-items: flex-end;
