--- a/sourse/pug/blocks/mixin-wrap/_mixin-wrap.scss
+++ b/sourse/pug/blocks/mixin-wrap/_mixin-wrap.scss
@@ -696,3 +696,71 @@
 		line-height: 125%;
 	}
 }
+
+.circular-progress-bar {
+	display: flex;
+	justify-content: center;
+	@include media-breakpoint-up(md) {
+		justify-content: flex-start;
+	}
+	.percent {
+		position: relative;
+	}
+	svg {
+		position: relative;
+		width: rem(128);
+		height: rem(128);
+		transform: rotate(-90deg);
+		@include media-breakpoint-up(md) {
+			width: rem(216);
+			height: rem(216);
+		}
+		circle {
+			width: 100%;
+			height: 100%;
+			fill: none;
+			stroke: rgba($color: $primary, $alpha: .36);
+			stroke-width: rem(12);
+			cx: 64;
+			cy: 64;
+			r: 52;
+			@include media-breakpoint-up(md) {
+				stroke-width: rem(24);
+				cx: 108;
+				cy: 108;
+				r: 84;
+			}
+			&:last-of-type {
+				--dasharray: #{rem(327)};
+				stroke-dasharray: var(--dasharray);
+				stroke-dashoffset: calc(var(--dasharray) - (var(--dasharray) * var(--percent)) / 100);
+				stroke: $primary; 
+				@include media-breakpoint-up(md) {
+					--dasharray: #{rem(527)};
+				}
+			}
+		}
+	}
+	.number {
+		position: absolute;
+		top: 50%;
+		left: 50%;
+		transform: translate(-50%, -50%);
+		color: #fff;
+		text-align: center;
+		h2 {
+			font-family: "AkzidenzGroteskProExtended";
+			line-height: 1.2;
+			margin-bottom: rem(6);
+			color: #fff;
+			font-size: rem(20);
+			@include media-breakpoint-up(md) {
+				font-size: rem(32);
+			}
+		}
+		p {
+			line-height: 1.25;
+			margin-bottom: 0;
+		}
+	}
+}
