--- a/sourse/pug/pages/01-3-house.pug
+++ b/sourse/pug/pages/01-3-house.pug
@@ -44,4 +44,7 @@ block pagecontent
 					.col-sm-6.col-lg-4.col-xl-3
 						+workStatus('Плинтус', '3%', '#8B9298')
 
+						
+		.container-fluid.mt-4
+			+toggleBlock()
 
