--- a/sourse/sass/_sprite.scss
+++ b/sourse/sass/_sprite.scss
@@ -39,11 +39,27 @@
 	font-size:math.div(20,10)*1rem;
 	width: math.div(20,20)*1em;
 }
+.icon-gantt {
+	font-size:math.div(24,10)*1rem;
+	width: math.div(24,24)*1em;
+}
+.icon-info {
+	font-size:math.div(24,10)*1rem;
+	width: math.div(24,24)*1em;
+}
 .icon-instagram {
 	font-size:math.div(24,10)*1rem;
 	width: math.div(24,24)*1em;
 }
+.icon-list {
+	font-size:math.div(24,10)*1rem;
+	width: math.div(24,24)*1em;
+}
 .icon-objects {
+	font-size:math.div(24,10)*1rem;
+	width: math.div(24,24)*1em;
+}
+.icon-pen {
 	font-size:math.div(24,10)*1rem;
 	width: math.div(24,24)*1em;
 }
@@ -62,6 +78,10 @@
 .icon-telegram {
 	font-size:math.div(13,10)*1rem;
 	width: math.div(15,13)*1em;
+}
+.icon-tile {
+	font-size:math.div(24,10)*1rem;
+	width: math.div(24,24)*1em;
 }
 .icon-viber {
 	font-size:math.div(16,10)*1rem;
