--- a/sourse/pug/blocks/mixin-wrap/_mixin-wrap.scss
+++ b/sourse/pug/blocks/mixin-wrap/_mixin-wrap.scss
@@ -284,6 +284,12 @@
 	&__row {
 		--bs-gutter-y: #{rem(12)};
 	}
+	&__col {
+		@include media-breakpoint-down(md) {
+			display: flex;
+			justify-content: center;
+		}
+	}
 
 	h1 {
 		margin-bottom: 0;
@@ -307,26 +313,42 @@
 	}
 	&__edit {
 		display: inline-flex;
+		flex-direction: row-reverse;
 		align-items: center;
 		line-height: 1.25;
 		font-style: italic;
 		color: $gray-600;
+		@include media-breakpoint-up(md) {
+			flex-direction: row;
+		}
 		&:hover {
 			color: $primary;
 		}
 		.icon {
 			font-size: rem(24);
 			flex: 0 0 auto;
-			margin-left: rem(12);
+			margin-right: rem(12);
+			@include media-breakpoint-up(md) {
+				margin-right: 0;
+				margin-left: rem(12);
+			}
 		}
 	}
 	.task-stat {
-		display: inline-flex;
 		color: $gray-800;
-		// font-family: 'AkzidenzGroteskProExtended';
+		// @include media-breakpoint-down(md) {
+		// 	display: inline-flex;
+		// }
 	}
 	.start-date {
-		display: inline-flex;
+		@include media-breakpoint-up(md) {
+			background-color: $light;
+			color: $body-color;
+			border-color: $gray-200;
+		}
+		// @include media-breakpoint-down(md) {
+		// 	display: inline-flex;
+		// }
 	}
 }
 
@@ -620,9 +642,10 @@
 	}
 }
 .start-date {
-	padding: rem(12) rem(18);
+	padding: rem(11) rem(17);
 	border-radius: 60px;
 	background: rgba(0, 0, 0, 0.48);
+	border: 1px solid transparent;
 	display: flex;
 	align-items: center;
 	color: #fff;
@@ -720,7 +743,7 @@
 			width: 100%;
 			height: 100%;
 			fill: none;
-			stroke: rgba($color: $primary, $alpha: .36);
+			stroke: rgba($color: $primary, $alpha: 0.36);
 			stroke-width: rem(12);
 			cx: 64;
 			cy: 64;
@@ -735,7 +758,7 @@
 				--dasharray: #{rem(327)};
 				stroke-dasharray: var(--dasharray);
 				stroke-dashoffset: calc(var(--dasharray) - (var(--dasharray) * var(--percent)) / 100);
-				stroke: $primary; 
+				stroke: $primary;
 				@include media-breakpoint-up(md) {
 					--dasharray: #{rem(527)};
 				}
