--- a/sourse/sass/_base.scss
+++ b/sourse/sass/_base.scss
@@ -116,7 +116,6 @@ main{
 aside {
 	background-color: #fff;
 	@include media-breakpoint-up(md) {
-		--asideW: #{rem(62)};
 		height: 100vh;
 		position: sticky;
 		left: 0;
@@ -124,16 +123,23 @@ aside {
 		flex: 0 0 var(--asideW);
 		background-color: $gray-800;
 	}
-	@include media-breakpoint-up(lg) {
-		--asideW: #{rem(72)};
-	}
 }
 .main-center-wrap {
 	flex-grow: 1;
 	overflow: hidden;
 	position: relative;
-	@include media-breakpoint-down(md) {
-		padding-bottom: rem(48);
+	padding-bottom: rem(48);
+	@include media-breakpoint-up(md) {
+		padding-bottom: 0;
+	}
+}
+
+.page-with-control-bar {
+	.main-center-wrap  {
+		padding-bottom: calc(rem(48) + rem(48));
+		@include media-breakpoint-up(md) {
+			padding-bottom: calc(rem(72));
+		}
 	}
 }
 // .main-wrapper__inner{
@@ -570,10 +576,6 @@ iframe {
 	max-width: 340px;
 	margin-left: auto;
 	margin-right: auto;
-}
-
-.text-14 {
-	@include text-10;
 }
 
 p {
