--- a/sourse/sass/_root.scss
+++ b/sourse/sass/_root.scss
@@ -2,11 +2,16 @@
 :root {
 	--animate-delay: 1.2s;
 	--bs-body-font-size: #{$em-base};
+	--asideW: 0px;
 	@include media-breakpoint-up(md) {
 
 		// --sPT: #{rem(80)};
 		// --sPB: #{rem(36)};
 		--sTPB: #{rem(40)};
+		--asideW: #{rem(62)};
+	}
+	@include media-breakpoint-up(lg) {
+		--asideW: #{rem(72)};
 	}
 
 	--sPT: 0;
